Rule para detecção de Sindrome Respiratória Aguda Grave

--- a/epidemiologia/src/main/resources/application.yml
+++ b/epidemiologia/src/main/resources/application.yml
@@ -1,8 +1,13 @@
 spring:
   application:
     name: epidemiologia
+  threads:
+    virtual:
+      enabled: true
 
+# path para o arquivo GPKG
 geotools:
   geopackage:
     path:
 
+valor-minimo-casos: 1200
