--- a/epidemiologia/src/main/resources/application.yml
+++ b/epidemiologia/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   application:
     name: epidemiologia
-    
+
   threads:
     virtual:
       enabled: true
@@ -9,11 +9,21 @@ spring:
   profiles:
     active: dev
 
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username:
+    password:
+    default-encoding: UTF-8
+    properties:
+      mail.smtp.auth: true
+      mail.smtp.starttls.enable: true
+
 # path para o arquivo GPKG
 geotools:
   geopackage:
     path: 
 
-valor-minimo-casos: 
+valor-minimo-casos: 1200
 
 drools.clock-type: pseudo
