--- a/epidemiologia/src/main/resources/application.yml
+++ b/epidemiologia/src/main/resources/application.yml
@@ -1,3 +1,9 @@
+valor-minimo-casos: 1200
+
+drools:
+  clock-type: 
+  retention.days:
+
 spring:
   application:
     name: epidemiologia
@@ -7,23 +13,41 @@ spring:
       enabled: true
 
   profiles:
-    active: dev
+    active: 
 
   mail:
     host: smtp.gmail.com
     port: 587
-    username:
-    password:
+    username: 
+    password: 
     default-encoding: UTF-8
     properties:
       mail.smtp.auth: true
       mail.smtp.starttls.enable: true
 
+  datasource:
+    url: jdbc:postgresql://localhost:5432/
+    username: 
+    password: 
+    driver-class-name: org.postgresql.Driver
+
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: validate
+
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+        jdbc:
+          batch_size: 500
+        order_inserts: true
+        order_updates: true
+        id:
+          new_generator_mappings: true
+
 # path para o arquivo GPKG
 geotools:
   geopackage:
-    path: 
+    path:
 
-valor-minimo-casos: 1200
-
-drools.clock-type: pseudo
